cambios en imagenes

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -183,8 +183,8 @@
                 <div class="estadistica_back">
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
-                <div class="jugador">
-                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="" onmouseover="showTooltip(this)" onmouseout="hideTooltip(this)">
+                <div class="jugador" onmouseover="showTooltip()" onmouseout="hideTooltip()">
+                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
                     <div class="tooltip">Informacion del jugador</div>
                 </div>
                 <div class="jugador_info">
@@ -308,7 +308,7 @@
                     <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/li_yingying.webp" alt="">
+                    <img src="./imagenes/Jugadores/li_yingying.png" alt="">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Mejor Atacante</h3>
@@ -337,7 +337,7 @@
                     <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/nimir_abdel-aziz.png" alt="">
+                    <img src="./imagenes/Jugadores/maria_yordanova.png" alt="">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Mejor Sacadora</h3>
@@ -365,7 +365,7 @@
                     <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/mila_pashkuleva.jpeg" alt="">
+                    <img src="./imagenes/Jugadores/mila_pashkuleva.png" alt="">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Mejor Defensora</h3>
@@ -381,7 +381,7 @@
                 <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
             </div>
             <div class="jugador">
-                <img src="./imagenes/Jugadores/yunlu_wang.webp" alt="">
+                <img src="./imagenes/Jugadores/yunlu_wang.png" alt="">
             </div>
             <div class="jugador_info">
                 <h3 class="titulo_info">Mejor Receptora</h3>
@@ -390,6 +390,24 @@
                 <p><img src="./imagenes/banderas/bandera_china.png" alt="" height="15px" width="30px"> China</p>
             </div>
         </div>
+
+    </section>
+
+    <section class="campeonato_mundial_voley">
+
+        <div class="contenedor_vnl">
+
+            <div class="info_nations_league">
+                <p>El Campeonato Mundial de Voleibol Masculino es una de las máximas competiciones internacionales de voleibol disputada por los equipos nacionales masculinos miembros de la Federación Internacional de Voleibol (FIVB). El primer torneo tuvo lugar en 1949; las primeras ediciones se realizaron en un período variable, pero desde 1962 se ha celebrado cada cuatro años.</p>
+            </div>
+
+            <div class="logo_nations_league">
+                <img src="./imagenes/logo depologs/logo_campeonato_mundialmas.jpeg" alt="">
+            </div>
+
+        </div>
+
+        <h2 class="divisiones">Campeonato Mundial de voley masculino</h2>
 
     </section>
 
