--- a/pages/biblioteca_videos/fotos futbol/fotos_futbol.html
+++ b/pages/biblioteca_videos/fotos futbol/fotos_futbol.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="/pages/biblioteca_videos/home_videos.css">
+    <link rel="stylesheet" href="../home_videos.css"> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,15 +17,19 @@
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../home_pages.html'">
+        <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
             <span>ATRAS</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../deportes/home_deportes.html'">
+        <button class="animated-button" onclick="window.location.href = '../home_videos.html'">
+            <span>BIBLIOTECA</span>
+            <span></span>
+        </button>
+        <button class="animated-button" onclick="window.location.href = '../../deportes/home_deportes.html'">
             <span>DEPORTES</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../estadisticas/home_estadisticas.html'">
+        <button class="animated-button" onclick="window.location.href = '../../estadisticas/home_estadisticas.html'">
             <span>ESTADISTICAS</span>
             <span></span>
         </button>
