--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -14,22 +14,18 @@
                 <a href="#"><img src="./images/logo.PNG" alt="Logo"></a>
             </div>
             <div class="enlaces">
-                <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
-                    <a href="./home_futbol.html">INICIO</a>
+                <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">ATRAS</a>
                 </button>
-                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
-                    <a href="#">ESTADISTICAS</a>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">ESTADISTICAS</a>
                 </button>
-                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
-                    <a href="#">VIDEOTECA</a>
+                <button class="animated-button" onclick="window.location.href = '../../biblioteca_videos/fotos futbol/fotos_futbol.html'">BIBLIOTECA</a>
                 </button>
-                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
-                    <a href="#">+ DEPORTES</a>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">+ DEPORTES</a>
                 </button>
             </div>
             <div class="ingreso">
                 <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
-                <a href="/Depologs_tp/login/login.html">LOGIN</a>
+                <a href="../../../login/login.html">LOGIN</a>
                 </button>
                 <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
                 <a href="#">REGISTRO</a>
