--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -183,9 +183,8 @@
                 <div class="estadistica_back">
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
-                <div class="jugador" onmouseover="showTooltip()" onmouseout="hideTooltip()">
+                <div class="jugador">
                     <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
-                    <div class="tooltip">Informacion del jugador</div>
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Máximo Anotador</h3>
@@ -393,22 +392,193 @@
 
     </section>
 
+    
+
     <section class="campeonato_mundial_voley">
 
-        <div class="contenedor_vnl">
+        <h2 class="divisiones">Campeonato Mundial del voley masculino</h2>
 
-            <div class="info_nations_league">
+            <div class="contenedor_vnl">
+
+                <div class="info_nations_league">
                 <p>El Campeonato Mundial de Voleibol Masculino es una de las máximas competiciones internacionales de voleibol disputada por los equipos nacionales masculinos miembros de la Federación Internacional de Voleibol (FIVB). El primer torneo tuvo lugar en 1949; las primeras ediciones se realizaron en un período variable, pero desde 1962 se ha celebrado cada cuatro años.</p>
-            </div>
+                </div>
 
-            <div class="logo_nations_league">
+                <div class="logo_nations_league">
                 <img src="./imagenes/logo depologs/logo_campeonato_mundialmas.jpeg" alt="">
+                </div>
+
             </div>
 
-        </div>
+        
 
-        <h2 class="divisiones">Campeonato Mundial de voley masculino</h2>
+    <div class="campeonato_mundial_mas">
 
+        <table class="tabla">
+            <th colspan="5">Ediciones campeonato mundial</th>
+            <tr>
+                <th>Año</th>
+                <th>Sede</th>
+                <th><img src="./imagenes/iconos/medalla-de-oro.png" alt="" height="30px" width="30px"></th>
+                <th><img src="./imagenes/iconos/medalla-de-plata.png" alt="" height="30px" width="30px"></th>
+                <th><img src="./imagenes/iconos/medalla-de-bronce.png" alt="" height="30px" width="30px"></th>
+            </tr>
+            <tr>
+                <td>1949</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt=""> Bulgaria</td>
+            </tr>
+            <tr>
+                <td>1952</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt=""> Bulgaria</td>
+            </tr>
+            <tr>
+                <td>1956</td>
+                <td><img src="./imagenes/banderas/bandera_francia.png" alt=""> Francia</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_rumania.png" alt=""> Rumania</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
     </section>
 
     <h1>holaaaaaaaaaaaaaaaa</h1>
