--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -425,52 +425,52 @@
             </tr>
             <tr>
                 <td>1949</td>
-                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
-                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
-                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
-                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt=""> Bulgaria</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria"> Bulgaria</td>
             </tr>
             <tr>
                 <td>1952</td>
-                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
-                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
-                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
-                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt=""> Bulgaria</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria"> Bulgaria</td>
             </tr>
             <tr>
                 <td>1956</td>
-                <td><img src="./imagenes/banderas/bandera_francia.png" alt=""> Francia</td>
-                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt=""> Checoslovaquia</td>
-                <td><img src="./imagenes/banderas/bandera_rumania.png" alt=""> Rumania</td>
-                <td><img src="./imagenes/banderas/bandera_urss.png" alt=""> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_francia.png" alt="Bandera Francia"> Francia</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_rumania.png" alt="Bandera Rumania"> Rumania</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1960</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_rumania.png" alt="Bandera Rumania"> Rumania</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1962</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_rumania.png" alt="Bandera Rumania"> Rumania</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1966</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia"> Checoslovaquia</td>
+                <td><img src="./imagenes/banderas/bandera_rumania.png" alt="Bandera Rumania"> Rumania</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1970</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria"> Bulgaria</td>
+                <td><img src="./imagenes/banderas/bandera_rda.png" alt="Bandera RDA"> RDA</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria"> Bulgaria</td>
+                <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón"> Japón</td>
             </tr>
             <tr>
                 <td></td>
