--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -473,110 +473,99 @@
                 <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón"> Japón</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1974</td>
+                <td><img src="./imagenes/banderas/bandera_mexico.png" alt="Bandera Mexico"> Mexico</td>
+                <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón"> Japón</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1978</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Italia</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Italia</td>
+                <td><img src="./imagenes/banderas/bandera_cuba.png" alt="Bandera Cuba"> Cuba</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1982</td>
+                <td><img src="./imagenes/banderas/bandera_argentina.png" alt="Bandera Argentina"> Argentina</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_argentina.png" alt="Bandera Argentina"> Argentina</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1986</td>
+                <td><img src="./imagenes/banderas/bandera_francia.png" alt="Bandera Francia"> Francia </td>
+                <td><img src="./imagenes/banderas/bandera_eeuu.png" alt="Bandera Estados Unidos"> Estados Unidos</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria"> Bulgaria</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1990</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Italia</td>
+                <td><img src="./imagenes/banderas/bandera_cuba.png" alt="Bandera Cuba"> Cuba</td>
+                <td><img src="./imagenes/banderas/bandera_urss.png" alt="Bandera URSS"> URSS</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1994</td>
+                <td><img src="./imagenes/banderas/bandera_grecia.png" alt="Bandera Grecia"> Grecia</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Italia</td>
+                <td><img src="./imagenes/banderas/bandera_paisesbajos.png" alt="Bandera Paises Bajos"> Paises Bajos</td>
+                <td><img src="./imagenes/banderas/bandera_eeuu.png" alt="Bandera Estados Unidos"> Estados Unidos</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1998</td>
+                <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón"> Japón</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Italia</td>
+                <td><img src="./imagenes/banderas/bandera_yugoslavia.png" alt="Bandera Yugoslavia"> Yugoslavia</td>
+                <td><img src="./imagenes/banderas/bandera_cuba.png" alt="Bandera Cuba"> Cuba</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>2002</td>
+                <td><img src="./imagenes/banderas/bandera_argentina.png" alt="Bandera Argentina"> Argentina</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_rusia.png" alt="Bandera Rusia"> Rusia</td>
+                <td><img src="./imagenes/banderas/bandera_francia.png" alt="Bandera Francia"> Francia</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>2006</td>
+                <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón"> Japón</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
+                <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria"> Bulgaria</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>2010</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Itala</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_cuba.png" alt="Bandera Cuba"> Cuba</td>
+                <td><img src="./imagenes/banderas/bandera_serbia.png" alt="Bandera Serbia"> Serbia</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>2014</td>
+                <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
+                <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_alemania.png" alt="Bandera Alemania"> Alemania</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>2018</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Italia
+                <img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria"> Bulgaria</td>
+                <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
+                <td><img src="./imagenes/banderas/bandera_eeuu.png" alt="Bandera Estados Unidos"> Estados Unidos</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>2022</td>
+                <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia
+                <img src="./imagenes/banderas/bandera_eslovenia.png" alt="Bandera Eslovenia"> Eslovenia</td>
+                <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia"> Italia</td>
+                <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
+                <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
             </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+            
         </table>
     </div>
     </section>
