--- a/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
+++ b/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copa Libertadores</title>
     <link rel="stylesheet" href="copa_libertadores.css">
+    <link rel="shortcut icon" href="../images/copa_libertadores_favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <a href="#"><img src="./images/logo.PNG" alt="Logo"></a>
+                <a href="#"><img src="../images/logo.PNG" alt="Logo"></a>
             </div>
             <div class="enlaces">
                 <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
