--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -295,15 +295,16 @@
         </div>
 </section>
 
-<div class="carousel-container">
-    <button id="prevBtn" class="carousel-button" onclick="changeSlide(-1)"><</button>
-    <div class="carousel-slide">
-        <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier2.png" alt="Resultado 1">
-        <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier3.png" alt="Resultado 2">
-        <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier4.png" alt="Resultado 3">
+    <h2 class="texto-noticias"> NOTICIAS AL INSTANTE</h2>
+    <div class="carousel-container">
+        <button id="prevBtn" class="carousel-button" onclick="changeSlide(-1)"><</button>
+        <div class="carousel-slide">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier2.png" alt="Resultado 1">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier3.png" alt="Resultado 2">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier4.png" alt="Resultado 3">
+        </div>
+        <button id="nextBtn" class="carousel-button" onclick="changeSlide(1)">></button>
     </div>
-    <button id="nextBtn" class="carousel-button" onclick="changeSlide(1)">></button>
-</div>
 
 
 <section id="bundesliga">
@@ -520,6 +521,7 @@
             </table>
         </div>
 </section>
+<h2 class="texto-noticias"> NOTICIAS AL INSTANTE</h2>
 <div class="carousel-container">
     <button id="prevBtn" class="carousel-button" onclick="changeSlide(-1)"><</button>
     <div class="carousel-slide">
@@ -529,6 +531,8 @@
     </div>
     <button id="nextBtn" class="carousel-button" onclick="changeSlide(1)">></button>
 </div>
+
+
 
 
 
