--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -602,13 +602,9 @@
     </div>
     </section>
 
-    <h1>holaaaaaaaaaaaaaaaa</h1>
-    <h1>tu hermana</h1>
-
-    <!---<section class="carrusel">
-        <div class="noticias">
+    <section class="carrusel">
+        <div class="carrusel_de_fotos">
             <img src="./imagenes/noticia1.jpg" alt="">
-            <p>noticia1</p>
         </div>
         <div class="noticias">
             <img src="./imagenes/noticia2.jpg" alt="">
@@ -622,22 +618,9 @@
 
     </section>
     
-    <section class="content_section2">
-
-        <h2 class="title">Voleyball Nations League 2023</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, ea omnis! Odio tempora, neque praesentium magni quaerat placeat ullam, iste id fugit culpa qui laudantium omnis consectetur deserunt molestias odit.</p>
-    </section>
-
-    <section class="content_section3">
-
-        <h2 class="title">Voleyball en los Juegos Olimpicos</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolore impedit unde quidem molestiae reiciendis ea ullam nam optio quia quis, eum recusandae. Maiores, error totam nulla excepturi sapiente commodi.</p>
-    </section>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus facilis accusantium doloremque? Iste ipsum quo fugit deleniti esse. Numquam architecto laboriosam deserunt animi, eaque fugit ex eum temporibus reprehenderit est.</p>
-
     <footer>
         <p>&#169 Depologs</p>
-    </footer> -->
+    </footer>
     <script src="./home_voley.js"></script>
 </body>
 </html>
