pruebas de videos de biblioteca

--- a/pages/biblioteca_videos/fotos f1/fotos_f1.html
+++ b/pages/biblioteca_videos/fotos f1/fotos_f1.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="/pages/biblioteca_videos/home_videos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
+    <link rel="stylesheet" href="f1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Depologs Biblioteca</title>
@@ -283,86 +284,104 @@
             </div>
         </button>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">  
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    
     <!--<div class="btnmas">
         <button class="buttonmas">
             <span class="button-border">
