--- a/pages/biblioteca_videos/fotos valorant/fotos_valorant.html
+++ b/pages/biblioteca_videos/fotos valorant/fotos_valorant.html
@@ -3,29 +3,35 @@
 <head>
     <link rel="stylesheet" href="/pages/biblioteca_videos/home_videos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
+    <link rel="stylesheet" href="f1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Depologs Biblioteca</title>
     <style>
         body 
         {
-            background: #3ca0df; /* Fallback color for old browsers */
-            background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #134964, #0e4058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background-image: url('./formula-1-logo-uhd-4k-wallpaper.jpg'); /* Reemplaza 'tu-imagen.jpg' con la URL de tu imagen */
+            background-size: cover; /* Ajusta la imagen al tamaño de la ventana del navegador */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            background-attachment: fixed;
         }
     </style>
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../home_pages.html'">
+        <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
             <span>ATRAS</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../deportes/home_deportes.html'">
+        <button class="animated-button" onclick="window.location.href = '../home_videos.html'">
+            <span>BIBLIOTECA</span>
+            <span></span>
+        </button>
+        <button class="animated-button" onclick="window.location.href = '../../deportes/home_deportes.html'">
             <span>DEPORTES</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../estadisticas/home_estadisticas.html'">
+        <button class="animated-button" onclick="window.location.href = '../../estadisticas/home_estadisticas.html'">
             <span>ESTADISTICAS</span>
             <span></span>
         </button>
@@ -278,86 +284,104 @@
             </div>
         </button>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">  
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
-    <div class="carousel">
-        <div class="card">
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
-            <p><source src="" type="video/mp4"></p>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
         </div>
     </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    <div class="videos">
+        <div class="carousel">
+            <div class="card">
+                <video src="" controls="autoplay" width="550"></video>
+                <video src="" controls="autoplay" width="550"></video>
+            </div>
+        </div>
+    </div>
+    
     <!--<div class="btnmas">
         <button class="buttonmas">
             <span class="button-border">
