cambios en los botones

--- a/pages/biblioteca_videos/fotos voley/fotos_voley.html
+++ b/pages/biblioteca_videos/fotos voley/fotos_voley.html
@@ -17,15 +17,18 @@
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = ''">
+        <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
             <span>ATRAS</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../deportes/home_deportes.html'">
+        <button class="animated-button" onclick="window.location.href = '../home_videos.html'">
+            <span>BIBLIOTECA</span>
+            <span></span>
+        <button class="animated-button" onclick="window.location.href = '../../deportes/home_deportes.html'">
             <span>DEPORTES</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../estadisticas/home_estadisticas.html'">
+        <button class="animated-button" onclick="window.location.href = '../../estadisticas/home_estadisticas.html'">
             <span>ESTADISTICAS</span>
             <span></span>
         </button>
