cambios en tabla

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -41,7 +41,7 @@
         <div class="tabla_potencias">
 
             <table class="tabla">
-                <th colspan="3">
+                <th colspan="3" style="color: black;">
                     Clasificación Masculina
                 </th>
                 <tr>
@@ -565,6 +565,7 @@
                 <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
                 <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil"> Brasil</td>
             </tr>
+            <th colspan="6" style="color: black;"> &#169 Depologs - Voley</th>
             
         </table>
 
@@ -580,21 +581,132 @@
 
                 <th colspan="6" style="color: black;">Actualizado hasta <img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia" height="15px" width="20px">Polonia/ <img src="./imagenes/banderas/bandera_eslovenia.png" alt="Bandera Eslovenia" height="15px" width="20px">Eslovenia 2022.</th>
                 <tr>
-                    <th>Pos.</th>
-                    <th>País</th>
+                    <th style="color: black;">Pos.</th>
+                    <th style="color: black;">País</th>
                     <th><img src="./imagenes/iconos/medalla-de-oro.png" alt="Medalla Oro" width="30px" height="30px"></th>
                     <th><img src="./imagenes/iconos/medalla-de-plata.png" alt="Medalla Oro" width="30px" height="30px"></th>
                     <th><img src="./imagenes/iconos/medalla-de-bronce.png" alt="Medalla Oro" width="30px" height="30px"></th>
-                    <th>Total</th>
+                    <th style="color: black;">Total</th>
                 </tr>
-                
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>1</td>
+                    <td><img src="./imagenes/banderas/bandera_rusia.png" alt="Bandera Rusia">Rusia</td>
+                    <td>6</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia">Italia</td>
+                    <td>4</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil">Brasil</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>1</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia">Polonia</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td><img src="./imagenes/banderas/bandera_checoslovaquia.png" alt="Bandera Checoslovaquia">Checoslovaquia</td>
+                    <td>2</td>
+                    <td>4</td>
+                    <td>0</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td><img src="./imagenes/banderas/bandera_eeuu.png" alt="Bandera Estados Unidos">Estados Unidos</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td><img src="./imagenes/banderas/bandera_alemania.png" alt="Bandera Alemania">Alemania</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><img src="./imagenes/banderas/bandera_cuba.png" alt="Bandera Cuba">Cuba</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><img src="./imagenes/banderas/bandera_rumania.png" alt="Bandera Rumania">Rumania</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td><img src="./imagenes/banderas/bandera_bulgaria.png" alt="Bandera Bulgaria">Bulgaria</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>4</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td><img src="./imagenes/banderas/bandera_serbia.png" alt="Bandera Serbia">Serbia</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td><img src="./imagenes/banderas/bandera_paisesbajos.png" alt="Bandera Paises Bajos">Países Bajos</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón">Japón</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td><img src="./imagenes/banderas/bandera_argentina.png" alt="Bandera Argentina">Argentina</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td><img src="./imagenes/banderas/bandera_francia.png" alt="Bandera Francia">Francia</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>1</td>
                 </tr>
                 <th colspan="6" style="color: black;"> &#169 Depologs - Voley</th>
             </table>
