--- a/home/home.html
+++ b/home/home.html
@@ -8,8 +8,8 @@
     <style>
         body 
         {
-            background: #3ca0df; /* Fallback color for old browsers */
-            background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
+            background: #3cdfa9; /* Fallback color for old browsers */
+            background: -webkit-linear-gradient(to right, #4cebc3, #1ac445); /* Chrome 10-25, Safari 5.1-6 */
             background: linear-gradient(to right, #134964, #0e4058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
     </style>
