--- a/pages/deportes/tenis/calendario.html
+++ b/pages/deportes/tenis/calendario.html
@@ -37,7 +37,7 @@
             <span></span>
         </button>
       <button class="animated-button" onclick="window.location.href='../tenis/calendario.html'">
-            <span>CALENTARIO</span>
+            <span>CALENDARIO</span>
             <span></span>
         </button>
 				   <button class="animated-button" onclick="window.location.href='../tenis/temporada.html'">
