--- a/pages/deportes/tenis/ranking.html
+++ b/pages/deportes/tenis/ranking.html
@@ -38,7 +38,7 @@
             <span></span>
         </button>
       <button class="animated-button" onclick="window.location.href='../tenis/calendario.html'">
-            <span>CALENTARIO</span>
+            <span>CALENDARIO</span>
             <span></span>
         </button>
 				   <button class="animated-button" onclick="window.location.href='../tenis/temporada.html'">
@@ -53,14 +53,330 @@
 		<header>
 		<h1>Ranking Hombres</h1>
 		</header>
-		<section>
-		  <p><img src="rankinghombres.png" width="904" height="919" alt="">&nbsp;</p>
-		  <p><img src="rankingmujeres.png" width="893" height="914" alt=""/></p>
-        </section>
+
+<center>
+    <title>Tabla de Posiciones</title>
+
+<table border="1">
+    <tr>
+        <th>POS</th>
+        <th>NOMBRE</th>
+        <th>PUNTOS</th>
+        <th>EDAD</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Novak Djokovic</td>
+        <td>11,795</td>
+        <td>36</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Carlos Alcaraz</td>
+        <td>8,535</td>
+        <td>20</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Stefanos Tsitsipas</td>
+        <td>4,615</td>
+        <td>25</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Andrey Rublev</td>
+        <td>4,515</td>
+        <td>25</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>Jannik Sinner</td>
+        <td>4,465</td>
+        <td>22</td>
+    </tr>
+    <tr>
+        <td>6</td>
+        <td>Taylor Fritz</td>
+        <td>3,955</td>
+        <td>25</td>
+    </tr>
+    <tr>
+        <td>7</td>
+        <td>Casper Ruud</td>
+        <td>3,560</td>
+        <td>24</td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>Alexander Zverev</td>
+        <td>3,030</td>
+        <td>26</td>
+    </tr>
+    <tr>
+        <td>9</td>
+        <td>Frances Tiafoe</td>
+        <td>2,690</td>
+        <td>25</td>
+    </tr>
+    <tr>
+        <td>10</td>
+        <td>Alex De Minaur</td>
+        <td>2,685</td>
+        <td>24</td>
+    </tr>
+    <tr>
+        <td>11</td>
+        <td>코코 Tommy Paul</td>
+        <td>2,660</td>
+        <td>26</td>
+    </tr>
+    <tr>
+        <td>12</td>
+        <td>Felix Auger-Aliassime</td>
+        <td>2,340</td>
+        <td>23</td>
+    </tr>
+    <tr>
+        <td>13</td>
+        <td>Karen Khachanov</td>
+        <td>2,135</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>14</td>
+        <td>Hubert Hurkacz</td>
+        <td>2,035</td>
+        <td>26</td>
+    </tr>
+    <tr>
+        <td>15</td>
+        <td>Cameron Norrie</td>
+        <td>1,985</td>
+        <td>28</td>
+    </tr>
+    <tr>
+        <td>16</td>
+        <td>Lorenzo Musetti</td>
+        <td>1,925</td>
+        <td>21</td>
+    </tr>
+    <tr>
+        <td>17</td>
+        <td>Ben Shelton</td>
+        <td>1,735</td>
+        <td>20</td>
+    </tr>
+    <tr>
+        <td>18</td>
+        <td>Grigor Dimitrov</td>
+        <td>1,735</td>
+        <td>32</td>
+    </tr>
+    <tr>
+        <td>19</td>
+        <td>Francisco Cerundolo</td>
+        <td>1,635</td>
+        <td>25</td>
+    </tr>
+    <tr>
+        <td>20</td>
+        <td>Nicolas Jarry</td>
+        <td>1,494</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>21</td>
+        <td>Jan-Lennard Struff</td>
+        <td>1,474</td>
+        <td>33</td>
+    </tr>
+    <tr>
+        <td>22</td>
+        <td>Tallon Griekspoor</td>
+        <td>1,446</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>23</td>
+        <td>Alejandro Davidovich Fokina</td>
+        <td>1,435</td>
+        <td>24</td>
+    </tr>
+</table>
+
+<br><br>
+		  
+> Mujeres
+
+<table border="1">
+    <tr>
+        <th>POS</th>
+        <th>NOMBRE</th>
+        <th>PUNTOS</th>
+        <th>EDAD</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Aryna Sabalenka</td>
+        <td>9,266</td>
+        <td>25</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Iga Swiatek</td>
+        <td>8,195</td>
+        <td>22</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Coco Gauff</td>
+        <td>6,165</td>
+        <td>19</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Elena Rybakina</td>
+        <td>5,790</td>
+        <td>24</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>Jessica Pegula</td>
+        <td>5,755</td>
+        <td>29</td>
+    </tr>
+    <tr>
+        <td>6</td>
+        <td>Marketa Vondrousova</td>
+        <td>3,830</td>
+        <td>24</td>
+    </tr>
+    <tr>
+        <td>7</td>
+        <td>Ons Jabeur</td>
+        <td>3,771</td>
+        <td>29</td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>Karolina Muchova</td>
+        <td>3,765</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>9</td>
+        <td>Maria Sakkari</td>
+        <td>3,525</td>
+        <td>28</td>
+    </tr>
+    <tr>
+        <td>10</td>
+        <td>Caroline Garcia</td>
+        <td>3,050</td>
+        <td>29</td>
+    </tr>
+    <tr>
+        <td>11</td>
+        <td>Madison Keys</td>
+        <td>2,940</td>
+        <td>28</td>
+    </tr>
+    <tr>
+        <td>12</td>
+        <td>Daria Kasatkina</td>
+        <td>2,790</td>
+        <td>26</td>
+    </tr>
+    <tr>
+        <td>13</td>
+        <td>Barbora Krejcikova</td>
+        <td>2,751</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>14</td>
+        <td>Petra Kvitova</td>
+        <td>2,750</td>
+        <td>33</td>
+    </tr>
+    <tr>
+        <td>15</td>
+        <td>Belinda Bencic</td>
+        <td>2,715</td>
+        <td>26</td>
+    </tr>
+    <tr>
+        <td>16</td>
+        <td>Jelena Ostapenko</td>
+        <td>2,580</td>
+        <td>26</td>
+    </tr>
+    <tr>
+        <td>17</td>
+        <td>Liudmila Samsonova</td>
+        <td>2,415</td>
+        <td>24</td>
+    </tr>
+    <tr>
+        <td>18</td>
+        <td>Veronika Kudermetova</td>
+        <td>2,250</td>
+        <td>26</td>
+    </tr>
+    <tr>
+        <td>19</td>
+        <td>Ekaterina Alexandrova</td>
+        <td>2,250</td>
+        <td>28</td>
+    </tr>
+    <tr>
+        <td>20</td>
+        <td>Beatriz Haddad Maia</td>
+        <td>2,220</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>21</td>
+        <td>Donna Vekic</td>
+        <td>2,125</td>
+        <td>27</td>
+    </tr>
+    <tr>
+        <td>22</td>
+        <td>Zheng Qinwen</td>
+        <td>2,123</td>
+        <td>20</td>
+    </tr>
+    <tr>
+        <td>23</td>
+        <td>Victoria Azarenka</td>
+        <td>2,065</td>
+        <td>34</td>
+    </tr>
+    <tr>
+        <td>24</td>
+        <td>Magda Linette</td>
+        <td>1,816</td>
+        <td>31</td>
+    </tr>
+    <tr>
+        <td>25</td>
+        <td>Elina Svitolina</td>
+        <td>1,809</td>
+        <td>28</td>
+    </tr>
+</table>
+
+
+
+
+
+
+
 		<footer>
 			
 		</footer>
-	   
+</center>	   
 <div class="texto-cambiante">
     <div class="cardcambiante">
             <a class="card1" href="#">
